# VQPP

./: LICENSE  README.md  pyproject.toml
baselines/corelation_cnn/: compute_correlation.py  create_dataset.py  train_cnn.py
baselines/finetune_bert/: finetune_bert.py
baselines/finetune_clip/: compute_correlations.py  create_dataset.py  create_dataset_clip.py  create_dataset_clip4clip.py  finetune_clip.py
baselines/linguistics/: linguistics.py
baselines/llm/: llm.py
prep_datasets/MSRVTT/: process_msrvtt.py
prep_datasets/VATEX/: download_vatex.py
query_reformulation/: chose_query.py  create_dataset.py  finetune_phi4.py
resources/GRAM/metrics/: msrvtt_test.csv  msrvtt_train.csv  msrvtt_val.csv  vatex_test.csv  vatex_train.csv  vatex_val.csv
resources/GRAM/top100/: msrvtt_test.jsonl  msrvtt_train.jsonl  msrvtt_val.jsonl  vatex_test.jsonl  vatex_train.jsonl  vatex_val.jsonl
resources/VAST/metrics/: msrvtt_test.csv  msrvtt_train.csv  msrvtt_val.csv  vatex_test.csv  vatex_train.csv  vatex_val.csv
resources/VAST/top100/: msrvtt_test.jsonl  msrvtt_train.jsonl  msrvtt_val.jsonl  vatex_test.jsonl  vatex_train.jsonl  vatex_val.jsonl
